--- a/Calculator-App/Calculator.html
+++ b/Calculator-App/Calculator.html
@@ -7,7 +7,42 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="box">
+        <form>
+            <div class="calc-display">
+                <input type="text" name="display">
+            </div>
+            <div>
+                <button type="button" value="AC">AC</button>
+                <button type="button" value="DE">DE</button>
+                <button type="button" value=".">.</button>
+                <button type="button" value="/">/</button>
+            </div>
+            <div>
+                <button type="button" value="7">7</button>
+                <button type="button" value="8">8</button>
+                <button type="button" value="9">9</button>
+                <button type="button" value="*">*</button>
+            </div>
+            <div>
+                <button type="button" value="4">4</button>
+                <button type="button" value="5">5</button>
+                <button type="button" value="6">6</button>
+                <button type="button" value="-">-</button>
+            </div>
+            <div>
+                <button type="button" value="1">1</button>
+                <button type="button" value="2">2</button>
+                <button type="button" value="3">3</button>
+                <button type="button" value="+">+</button>
+            </div>
+            <div>
+                <button type="button" value="00">00</button>
+                <button type="button" value="0">0</button>
+                <button type="button" value="=" class="equal">=</button>
+            </div>
+        </form>
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
