--- a/Calculator-App/Calculator.html
+++ b/Calculator-App/Calculator.html
@@ -13,33 +13,33 @@
                 <input type="text" name="display">
             </div>
             <div>
-                <button type="button" value="AC">AC</button>
-                <button type="button" value="DE">DE</button>
-                <button type="button" value=".">.</button>
-                <button type="button" value="/">/</button>
+                <button type="button" value="AC" onclick="display.value = '' " class="top-row">AC</button>
+                <button type="button" value="DE" onclick="display.value = display.value.toString().slice(0, -1)" class="top-row">DE</button>
+                <button type="button" value="." onclick="display.value += '.' " class="top-row">.</button>
+                <button type="button" value="/" onclick="display.value += '/' " class="top-row">/</button>
             </div>
             <div>
-                <button type="button" value="7">7</button>
-                <button type="button" value="8">8</button>
-                <button type="button" value="9">9</button>
-                <button type="button" value="*">*</button>
+                <button type="button" value="7" onclick="display.value += '7' ">7</button>
+                <button type="button" value="8" onclick="display.value += '8' ">8</button>
+                <button type="button" value="9" onclick="display.value += '9' ">9</button>
+                <button type="button" value="*" onclick="display.value += '*' " class="column">*</button>
             </div>
             <div>
-                <button type="button" value="4">4</button>
-                <button type="button" value="5">5</button>
-                <button type="button" value="6">6</button>
-                <button type="button" value="-">-</button>
+                <button type="button" value="4" onclick="display.value += '4' ">4</button>
+                <button type="button" value="5" onclick="display.value += '5' ">5</button>
+                <button type="button" value="6" onclick="display.value += '6' ">6</button>
+                <button type="button" value="-" onclick="display.value += '-' " class="column">-</button>
             </div>
             <div>
-                <button type="button" value="1">1</button>
-                <button type="button" value="2">2</button>
-                <button type="button" value="3">3</button>
-                <button type="button" value="+">+</button>
+                <button type="button" value="1" onclick="display.value += '1' ">1</button>
+                <button type="button" value="2" onclick="display.value += '2' ">2</button>
+                <button type="button" value="3" onclick="display.value += '3' ">3</button>
+                <button type="button" value="+" onclick="display.value += '+' " class="column">+</button>
             </div>
             <div>
-                <button type="button" value="00">00</button>
-                <button type="button" value="0">0</button>
-                <button type="button" value="=" class="equal">=</button>
+                <button type="button" value="00" onclick="display.value += '00' ">00</button>
+                <button type="button" value="0" onclick="display.value += '0' ">0</button>
+                <button type="button" value="=" onclick="display.value = eval(display.value)" class="equal column">=</button>
             </div>
         </form>
     </div>
