--- a/Calculator-App/Calculator.html
+++ b/Calculator-App/Calculator.html
@@ -10,7 +10,7 @@
     <div class="box">
         <form>
             <div class="calc-display">
-                <input type="text" name="display">
+                <input type="text" name="display" readonly>
             </div>
             <div>
                 <button type="button" value="AC" onclick="display.value = '' " class="top-row">AC</button>
@@ -39,10 +39,9 @@
             <div>
                 <button type="button" value="00" onclick="display.value += '00' ">00</button>
                 <button type="button" value="0" onclick="display.value += '0' ">0</button>
-                <button type="button" value="=" onclick="display.value = eval(display.value)" class="equal column">=</button>
+                <button type="button" value="=" onclick="display.value = Function('return ' + display.value)()" class="equal column">=</button>
             </div>
         </form>
     </div>
 </body>
-<script src="script.js"></script>
 </html>
