--- a/Dark-Mode-Js/Dark-mode.html
+++ b/Dark-Mode-Js/Dark-mode.html
@@ -41,14 +41,17 @@
     </header>
 
     <main>
-        <section class="info">
+        <section class="info-section">
+          <div class="info">
             <h1>I'm <span>Gray</span></h1>
             <p>I'm a web developer. I specialize in creating modern and responsive websites that are easy to use and navigate.</p>
+            <button>Download CV</button>
+          </div>
             <div class="svg-img">
-                <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-                    <path fill="#08BDBA" d="M54.7,-67.7C67.5,-54.4,72.1,-34,71.9,-15.6C71.7,2.8,66.5,19.1,59.3,36.8C52.1,54.5,42.9,73.5,27.3,82.2C11.8,91,-10.1,89.5,-29.5,82.1C-48.9,74.6,-65.8,61.2,-71.2,44.6C-76.5,28.1,-70.3,8.4,-64.1,-8.7C-58,-25.7,-51.9,-40.1,-41.2,-53.8C-30.5,-67.5,-15.3,-80.5,2.8,-83.8C20.9,-87.2,41.9,-81.1,54.7,-67.7Z" transform="translate(100 100)" />
-                  </svg>
-                  <img src="./Assets/Lovepik_com-450091966- flat illustration of website developer.png" alt="">
+              <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                <path fill="#8BD3DD" d="M41.5,-62.4C51.8,-58,56.8,-43.1,64.1,-28.8C71.3,-14.5,80.9,-0.7,80.7,12.7C80.6,26.2,70.7,39.5,58,45.2C45.2,51,29.6,49.3,16,52.3C2.4,55.3,-9.2,63.1,-19.3,61.9C-29.3,60.6,-37.8,50.4,-50.1,40.8C-62.5,31.3,-78.7,22.5,-80.7,11.3C-82.8,0.2,-70.7,-13.3,-63.7,-29.4C-56.8,-45.5,-55,-64.2,-45.3,-68.8C-35.5,-73.4,-17.8,-64,-1.1,-62.3C15.6,-60.6,31.2,-66.8,41.5,-62.4Z" transform="translate(100 100)" />
+              </svg>
+                  <img src="./Assets/Lovepik_com-450091966- flat illustration of website developer.png">
             </div>
             
         </section>
