--- a/Dark-Mode-Js/Dark-mode.html
+++ b/Dark-Mode-Js/Dark-mode.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dark Mode</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -52,6 +53,12 @@
                 <path fill="#8BD3DD" d="M41.5,-62.4C51.8,-58,56.8,-43.1,64.1,-28.8C71.3,-14.5,80.9,-0.7,80.7,12.7C80.6,26.2,70.7,39.5,58,45.2C45.2,51,29.6,49.3,16,52.3C2.4,55.3,-9.2,63.1,-19.3,61.9C-29.3,60.6,-37.8,50.4,-50.1,40.8C-62.5,31.3,-78.7,22.5,-80.7,11.3C-82.8,0.2,-70.7,-13.3,-63.7,-29.4C-56.8,-45.5,-55,-64.2,-45.3,-68.8C-35.5,-73.4,-17.8,-64,-1.1,-62.3C15.6,-60.6,31.2,-66.8,41.5,-62.4Z" transform="translate(100 100)" />
               </svg>
                   <img src="./Assets/Lovepik_com-450091966- flat illustration of website developer.png">
+            </div>
+
+            <div class="contact">
+              <i class="fa-brands fa-linkedin"></i>
+              <i class="fa-brands fa-square-github"></i>
+              <i class="fa-brands fa-square-instagram"></i>
             </div>
             
         </section>
