--- a/Image-Gallery-Js/Gallery.html
+++ b/Image-Gallery-Js/Gallery.html
@@ -8,18 +8,23 @@
   </head>
   <body>
     <header class="header">
-      <h1>css flexbox photo gallery</h1>
+      <h1>CSS Flexbox Photo Gallery</h1>
     </header>
     <div class="gallery">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg">
-      <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg">
+        <button class="scroll-left">&#10094;</button>
+      <div class="gallery-container">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="Image 1" width="150px" height="100px">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg" alt="Image 2" width="150px" height="100px">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg" alt="Image 3" width="150px" height="100px">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg" alt="Image 4" width="150px" height="100px">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg" alt="Image 5" width="150px" height="100px">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg" alt="Image 6" width="150px" height="100px">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg" alt="Image 7" width="150px" height="100px">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg" alt="Image 8" width="150px" height="100px">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg" alt="Image 9" width="150px" height="100px">
+      </div>
+      <button class="scroll-right">&#10095;</button>
     </div>
   </body>
+  <script src="script.js"></script>
 </html>
