--- a/Image-Gallery-Js/Gallery.html
+++ b/Image-Gallery-Js/Gallery.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="header">
-      <h1>CSS Flexbox Photo Gallery</h1>
+      <h1>Horizontal Image Gallery</h1>
     </header>
     <div class="gallery">
         <button class="scroll-left">&#10094;</button>
