--- a/Image-Gallery-Js/Gallery.html
+++ b/Image-Gallery-Js/Gallery.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo Gallery</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <header class="header">
@@ -24,6 +25,24 @@
         <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg" alt="Image 9" width="150px" height="100px">
       </div>
       <button class="scroll-right">&#10095;</button>
+    </div>
+
+    <div class="lightbox">
+      <div class="detail">
+        <span class="title">
+          Image <p class="current-img">3</p>
+          of <p class="total-img">6</p>
+        </span>
+        <span class="icon fas fa-times"></span>
+      </div>
+      <div class="img-box">
+        <div class="slide prev">
+          <i class="fas fa-angle-left"></i>
+        </div>
+        <div class="slide next">
+          <i class="fas fa-angle-right"></i>
+        </div>
+      </div>
     </div>
   </body>
   <script src="script.js"></script>
