--- a/Image-Gallery-Js/Gallery.html
+++ b/Image-Gallery-Js/Gallery.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="lightbox">
-      <div class="detail">
+      <div class="details">
         <span class="title">
           Image <p class="current-img">3</p>
           of <p class="total-img">6</p>
@@ -42,6 +42,7 @@
         <div class="slide next">
           <i class="fas fa-angle-right"></i>
         </div>
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg" alt="">
       </div>
     </div>
   </body>
