--- a/Image-Gallery-Js/Gallery.html
+++ b/Image-Gallery-Js/Gallery.html
@@ -42,7 +42,7 @@
         <div class="slide next">
           <i class="fas fa-angle-right"></i>
         </div>
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg" alt="">
+        <img src="" alt="">
       </div>
     </div>
   </body>
