--- a/Image-Search-Engine/Search-Engine.html
+++ b/Image-Search-Engine/Search-Engine.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <h1>Image Search Engine</h1>
+    <form id="search">
+        <input type="text" id="search-box" placeholder="Search for images...">
+        <button type="submit">Search</button>
+    </form>
+    <div id="search-img"></div>
+    <button id="show-more-btn">Show More</button>
 </body>
 <script src="script.js"></script>
 </html>
