--- a/Responsive/Responsive-Nav.html
+++ b/Responsive/Responsive-Nav.html
@@ -9,12 +9,12 @@
 <body>
     <header>
         <ul>
-            <li><a href="">Project</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">Product</a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href=""><span>Project</span></a></li>
+            <li><a href=""><span>Blog</span></a></li>
+            <li><a href=""><span>Products</span></a></li>
+            <li><a href=""><span>About</span></a></li>
+            <li><a href=""><span>Forum</span></a></li>
+            <li><a href=""><span>Login</span></a></li>
         </ul>
     </header>
 </body>
