added more hover effects

--- a/Icon-Hover/Icon-Hover.html
+++ b/Icon-Hover/Icon-Hover.html
@@ -24,5 +24,15 @@
       ></path>
     </svg>
   </button>
+
+  <ul>
+    <li><a href="#"><span>E-commerce</span></a></li>
+    <li><a href="#"><span>Blog</span></a></li>
+    <li><a href="#"><span>Products</span></a></li>
+    <li><a href="#"><span>About</span></a></li>
+    <li><a href="#"><span>Forum</span></a></li>
+    <li><a href="#"><span>Login</span></a></li>
+</ul>
+
 </body>
 </html>
