--- a/Carousel-SlideShow/SlideShow.html
+++ b/Carousel-SlideShow/SlideShow.html
@@ -11,24 +11,31 @@
         <div class="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/api/placeholder/800/400" alt="First slide">
+                    <img src="https://images.unsplash.com/photo-1743527173859-2cf44e80cef8?q=80&w=1587&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="First slide">
                     <div class="carousel-caption">
                         <h3>First Slide Title</h3>
                         <p>This is the description for the first slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/api/placeholder/800/400" alt="Second slide">
+                    <img src="https://images.unsplash.com/photo-1741807117240-0aee0cd41d25?q=80&w=1744&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Second slide">
                     <div class="carousel-caption">
                         <h3>Second Slide Title</h3>
                         <p>This is the description for the second slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/api/placeholder/800/400" alt="Third slide">
+                    <img src="https://images.unsplash.com/photo-1742387436246-b432a6bfc623?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Third slide">
                     <div class="carousel-caption">
                         <h3>Third Slide Title</h3>
                         <p>This is the description for the third slide.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="https://images.unsplash.com/photo-1738081359154-44d50176b2d0?q=80&w=1738&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Fourth slide">
+                    <div class="carousel-caption">
+                        <h3>Fourth Slide Title</h3>
+                        <p>This is the description for the Fourth slide.</p>
                     </div>
                 </div>
             </div>
@@ -46,6 +53,7 @@
                 <span class="indicator active" data-slide="0"></span>
                 <span class="indicator" data-slide="1"></span>
                 <span class="indicator" data-slide="2"></span>
+                <span class="indicator" data-slide="3"></span>
             </div>
         </div>
     </section>
