--- a/Loading-Effect/Loading.html
+++ b/Loading-Effect/Loading.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="loader"></div>
+    <div class="loader-wrapper">
+        <div class="loader"></div>
+    </div>
+    
 </body>
 <script src="script.js"></script>
 </html>
