--- a/Loading-Effect/Loading.html
+++ b/Loading-Effect/Loading.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="loader-wrapper">
+    <div class="preloader-wrapper">
         <div class="loader"></div>
     </div>
     
