remove hover from logo

--- a/Responsive/Responsive-Nav.html
+++ b/Responsive/Responsive-Nav.html
@@ -17,7 +17,7 @@
             <li><a href="#"><span>Login</span></a></li>
         </ul>
         <ul>
-            <li><a href="#"><span>E-commerce</span></a></li>
+            <li><a href="#" class="logo"><span>E-commerce</span></a></li>
             <li class="hideOnMobile"><a href="#"><span>Blog</span></a></li>
             <li class="hideOnMobile"><a href="#"><span>Products</span></a></li>
             <li class="hideOnMobile"><a href="#"><span>About</span></a></li>
