--- a/Search-Filter/Search-Filter.html
+++ b/Search-Filter/Search-Filter.html
@@ -21,6 +21,16 @@
                     <button aria-label="Search Button">Search</button>
                 </li>
             </ul>
+
+            <!-- <ul class="side-bar">
+                <li><a href="#about">About</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li class="search-bar">
+                    <input type="text" placeholder="Search..." aria-label="Search">
+                    <button aria-label="Search Button">Search</button>
+                </li>
+            </ul> -->
         </nav>
     </header>
 </body>
