--- a/Search-Filter/Search-Filter.html
+++ b/Search-Filter/Search-Filter.html
@@ -13,9 +13,9 @@
         </div>
         <nav class="nav-links">
             <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#projects">Projects</a></li>
+                <li><a href="#about"><span class="underline">About</span></a></li>
+                <li><a href="#portfolio"><span class="underline">Portfolio</span></a></li>
+                <li><a href="#projects"><span class="underline">Projects</span></a></li>
                 <li class="search-bar">
                     <input type="text" placeholder="Search..." aria-label="Search">
                     <button aria-label="Search Button">Search</button>
@@ -23,9 +23,9 @@
             </ul>
 
             <!-- <ul class="side-bar">
-                <li><a href="#about">About</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#projects">Projects</a></li>
+                <li><a href="#about"><span class="underline">About</span></a></li>
+                <li><a href="#portfolio"><span class="underline">Portfolio</span></a></li>
+                <li><a href="#projects"><span class="underline">Projects</span></a></li>
                 <li class="search-bar">
                     <input type="text" placeholder="Search..." aria-label="Search">
                     <button aria-label="Search Button">Search</button>
