--- a/Search-Filter/Search-Filter.html
+++ b/Search-Filter/Search-Filter.html
@@ -16,7 +16,7 @@
             <ul>
                 <li class="hideOnMobile"><a href="#about"><span class="underline">About</span></a></li>
                 <li class="hideOnMobile"><a href="#portfolio"><span class="underline">Portfolio</span></a></li>
-                <li class="hideOnMobile"><a href="#projects"><span class="underline">Projects</span></a></li>
+                <li class="hideOnMobile"><a href="#projects"><span class="underline">Products</span></a></li>
                 <li class="search-bar hideOnMobile">
                     <input type="text" placeholder="Search..." aria-label="Search">
                     <button aria-label="Search Button">Search</button>
@@ -28,7 +28,7 @@
                 <li onclick="hideSidebar()"><a href="#"><i class="fa-solid fa-xmark"></i></a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#projects">Projects</a></li>
+                <li><a href="#projects">Products</a></li>
                 <li class="search-bar">
                     <input type="text" placeholder="Search..." aria-label="Search">
                     <button aria-label="Search Button">Search</button>
