--- a/Search-Filter/Search-Filter.html
+++ b/Search-Filter/Search-Filter.html
@@ -40,7 +40,7 @@
     <main>
         <section class="products">
     <div class="card">
-    <div class="card-img"></div>
+    <div class="card-img"><img src="https://images.unsplash.com/photo-1633966887768-64f9a867bdba?q=80&w=1606&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""></div>
     <div class="card-info">
       <p class="text-title">T-shirt </p>
       <p class="text-body">Product description and details</p>
@@ -57,7 +57,7 @@
     </div></div>
 
     <div class="card">
-        <div class="card-img"></div>
+        <div class="card-img"><img src="https://images.unsplash.com/photo-1582552938357-32b906df40cb?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""></div>
         <div class="card-info">
           <p class="text-title">Jeans </p>
           <p class="text-body">Product description and details</p>
@@ -74,7 +74,7 @@
         </div></div>
 
         <div class="card">
-            <div class="card-img"></div>
+            <div class="card-img"><img src="https://images.unsplash.com/photo-1556306535-0f09a537f0a3?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""></div>
             <div class="card-info">
               <p class="text-title">Hat </p>
               <p class="text-body">Product description and details</p>
@@ -91,7 +91,7 @@
             </div></div>
 
             <div class="card">
-                <div class="card-img"></div>
+                <div class="card-img"><img src="https://images.unsplash.com/photo-1524805444758-089113d48a6d?q=80&w=1588&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""></div>
                 <div class="card-info">
                   <p class="text-title">Watch </p>
                   <p class="text-body">Product description and details</p>
@@ -108,7 +108,7 @@
                 </div></div>
 
                 <div class="card">
-                    <div class="card-img"></div>
+                    <div class="card-img"><img src="https://plus.unsplash.com/premium_photo-1681396658834-b56190480934?q=80&w=1587&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""></div>
                     <div class="card-info">
                       <p class="text-title">Smartphone </p>
                       <p class="text-body">Product description and details</p>
