--- a/Background/Background.html
+++ b/Background/Background.html
@@ -15,7 +15,8 @@
         </ul>
     </header>
     <main>
-        <section class="Hero">
+        <section class="Video-section">
+            <div class="Hero">
             <div class="heroText">
                 <h1>Welcome to my website</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatibus.</p>
@@ -23,6 +24,8 @@
 
             <div class="heroImage">
                 <img src="https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDJ8fGJsdXUlMjB3aGl0ZXxlbnwwfHx8fDE2ODQ5NTY1NzE&ixlib=rb-4.0.3&q=80&w=1080" alt="Hero Image">
+            </div>
+            </div>
         </section>
         <section></section>
     </main>
